--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Test dom-freeline</title>
 </head>
 <body>
 <div style="margin: 0 35% 0 35%;">
